tests/unit-fail-compilation/j085b.ref
j085b.c[1:5-19] : undeclared identifier in parameter identifier list
Fatal error: exception Frontc.ParseError("Parse error")
Entity: line 1: parser error : Document is empty
Parsing error
^
Translation failed. Run kcc -d j085b.c to see commands run.
